feat: show list of services in monthly report
fix #10